manifests/docker-compose/templates/minting-network-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -c
    kompose.version: 1.22.0 (955b78124)
  creationTimestamp: null
  labels:
    io.kompose.service: minting-network
  name: minting-network
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: minting-network
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -c
        kompose.version: 1.22.0 (955b78124)
      creationTimestamp: null
      labels:
        io.kompose.network/rair-local: "true"
        io.kompose.service: minting-network
    spec:
      containers:
        - image: rairtechinc/minting-network:dev_latest
          name: minting-network
          ports:
            - containerPort: 3001
            - containerPort: 80
          resources: {}
      restartPolicy: Always
status: {}
