manifests/docker-compose/templates/rair-local-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  creationTimestamp: null
  name: rair-local
spec:
  ingress:
    - from:
        - podSelector:
            matchLabels:
              io.kompose.network/rair-local: "true"
  podSelector:
    matchLabels:
      io.kompose.network/rair-local: "true"
